--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@reduxjs/toolkit": "^2.5.1",
     "firebase": "^11.3.1",
     "lucide-react": "^0.482.0",
